--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,11 @@
     color: red;
     padding-left:10px;
 }
+.avatarHeader{
+    height: 40px;
+    padding-left: 10px;
+}
+.avatarHeader img{
+    height: 30px;
+    width: 30px;
+}
