1.将牛人列表的数据获取方式改为redux方法. 2.将获取牛人和boss信息的相关redux方法整理成单独的redux文件.

--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,15 @@
 [role="button"],.am-tab-bar-tab{
     cursor: pointer;
 }
+
 .am-tab-bar{
     position: fixed;
     bottom:0;
     width: 100%;
 }
 .fixed-header.am-navbar{
+}
+/*文本域换行*/
+.am-card-body{
+    white-space: pre;
 }
