前后台联调socket.io.

--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,12 @@
 .am-card-body, .am-list-content p {
     white-space: pre;
 }
+
+/* 聊天框样式 */
+#chat-page .chat-me .am-list-extra{
+    flex-basis: auto;
+}
+#chat-page .chat-me .am-list-content{
+    padding-right: 15px;
+    text-align: right;
+}
