--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,17 @@
 }
 
 /* 聊天框样式 */
-#chat-page .chat-me .am-list-extra{
+#chat-page .chat-me-theme .am-list-extra{
     flex-basis: auto;
 }
-#chat-page .chat-me .am-list-content{
+#chat-page .chat-me-theme .am-list-content{
     padding-right: 15px;
     text-align: right;
+}
+/*聊天输入框定位到底部显示*/
+.stick-footer{
+    z-index: 10;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
