1.加入了用户输入emoji表情的功能.

--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,14 @@
     padding-right: 15px;
     text-align: right;
 }
-/*聊天输入框定位到底部显示*/
+#chat-page .am-grid-icon{
+    display: none;
+}
+#chat-page .am-grid-text{
+    margin-top: 0;
+}
+
+    /*聊天输入框定位到底部显示*/
 .stick-footer{
     z-index: 10;
     position: absolute;
